--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -3,11 +3,17 @@
     <meta charset="UTF-8">
 
     <script src="/webjars/vue/2.5.16/vue.min.js"></script>
+    <script src="/webjars/vue-resource/0.9.3/vue-resource.js"></script>
     <script src="/webjars/jquery/3.0.0/jquery.min.js"></script>
     <script src="/webjars/bootstrap/4.1.3/js/bootstrap.min.js"></script>
     <link rel="stylesheet" href="/webjars/bootstrap/4.1.3/css/bootstrap.min.css" />
     <title>Letenkovac2</title>
 </head>
+<style>
+    .card {
+        width:100%;
+    }
+</style>
 <body>
 <div class="container" id="app">
     <div class="row">
@@ -19,49 +25,21 @@
         </div>
     </div>
     <div class="row">
-        <div class="col-3">
-            <div class="nav flex-column nav-pills" id="v-pills-tab" role="tablist" aria-orientation="vertical">
-                <a class="nav-link" id="v-pills-home-tab" data-toggle="pill" href="" aria-selected="true">Home</a>
-                <a class="nav-link" id="v-pills-profile-tab" data-toggle="pill" href="" aria-selected="false">Profile</a>
-                <a class="nav-link" id="v-pills-messages-tab" data-toggle="pill" href="" aria-selected="false">Messages</a>
-                <a class="nav-link" id="v-pills-settings-tab" data-toggle="pill" href="" aria-selected="false">Settings</a>
+        <div v-for="item in data" class="card">
+            <div class="row">
+            <div class="col-2">
+                <img :src="item.picture" class="card-img-top" alt="...">
+            </div>
+            <div class="col-10 card-body">
+                <h5 class="card-title">{{item.name}}</h5>
+                <p class="card-text">{{item.createdTime|formatDate}}</p>
+                <p class="card-text">{{item.message}}</p>
+                <a :href="item.link" class="btn btn-primary">{{item.fanPage.name}}</a>
+            </div>
             </div>
         </div>
-        <div class="col-9">
-            <div class="container">
-                <div class="row">
-                    <div class="col-12 border">
-                        gsdgg mksfgmfkmgksfmgksfmg kfmsgkfmkg mfk gmfk gkf gkmfdkmgdf
-                    </div>
-                    <div class="col-12 border">
-                        gsdgg mksfgmfkmgksfmgksfmg kfmsgkfmkg mfk gmfk gkf gkmfdkmgdf
-                    </div>
-                    <div class="col-12 border">
-                        gsdgg mksfgmfkmgksfmgksfmg kfmsgkfmkg mfk gmfk gkf gkmfdkmgdf
-                    </div>
-                    <div class="col-12 border">
-                        gsdgg mksfgmfkmgksfmgksfmg kfmsgkfmkg mfk gmfk gkf gkmfdkmgdf
-                    </div>
-                    <div class="col-12 border">
-                        gsdgg mksfgmfkmgksfmgksfmg kfmsgkfmkg mfk gmfk gkf gkmfdkmgdf
-                    </div>
-                    <div class="col-12 border">
-                        gsdgg mksfgmfkmgksfmgksfmg kfmsgkfmkg mfk gmfk gkf gkmfdkmgdf
-                    </div>
-                </div>
-            </div>
 
-            <nav aria-label="...">
-                <ul class="pagination">
-                    <li class="page-item disabled">
-                        <a class="page-link" href="#" tabindex="-1" aria-disabled="true">Previous</a>
-                    </li>
-                    <li class="page-item">
-                        <a class="page-link" href="#">Next</a>
-                    </li>
-                </ul>
-            </nav>
-        </div>
+        <button class="page-link" v-on:click="loadMore">Load more ({{nextPage}})</button>
     </div>
     <div class="row">
         <div class="col-12 ">
@@ -72,12 +50,43 @@
     </div>
 </div>
 <script type="text/javascript">
+    Vue.filter('formatDate', function(value) {
+        if (value) {
+            var date = new Date(value);
+            return date.getDate() + "." + date.getMonth() + "." + date.getFullYear() + " " + date.getHours() + ":" + date.getMinutes();
+        }
+    });
+
     var app = new Vue({
         el: '#app',
         data: {
-            message: 'Letenkovac2!'
+            message: "Letenkovac 2",
+            data: [],
+            busy: false,
+            nextPage: 1
+        },
+        methods: {
+            loadMore: function() {
+                if(this.busy) {
+                    return;
+                }
+                this.busy = true;
+
+                this.$http.get('/api/v1/posts/' + this.nextPage).then(function(response) {
+                    console.log(response);
+                    var newData = JSON.parse(response.data);
+
+                    this.data = this.data.concat(newData.content);
+                    this.nextPage++;
+
+                    if(this.nextPage < newData.totalPages) {
+                        this.busy = false;
+                    }
+                });
+            }
         }
-    })
+    });
+    app.loadMore();
 </script>
 </body>
 </html>
